compiler/actonc/test/typeerrors/funargs4.golden
Building file test/typeerrors/funargs4.act
  Compiling funargs4.act for development

ERROR: Error when compiling funargs4 module: Type error

  |
4 |a = f(4,x=3,y=4)
  |        ^
Keyword element 'x' is not expected

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

